# imgui-sdl3-sys

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
examples/imgui-sdl3-sdlgpu3/: Cargo.toml  README.md  imgui.ini
examples/imgui-sdl3-sdlgpu3/src/: main.rs
imgui-sdl3-sys/: Cargo.toml  README.md  build-common.rs  build.rs  config.txt
imgui-sdl3-sys/docs/: bindings.md  testing.md
imgui-sdl3-sys/src/: imgui_sys.rs  lib.rs  sdl3.rs  sdlgpu3.rs
imgui-sdl3-sys/src/imgui_sys/: sdl3.rs
imgui-sdl3-sys/tests/: compile_test.rs  link_test_simple.rs  smoke_test.rs
imgui-src/: Cargo.toml
imgui-src/dcimgui/: CMakeLists.txt  cimgui.json  cimgui_internal.json  cimgui_internal_imgui.json
imgui-src/dcimgui/backends/: C_WRAPPERS.md  cimgui_impl_sdl3.cpp  cimgui_impl_sdl3.h  cimgui_impl_sdlgpu3.cpp  cimgui_impl_sdlgpu3.h  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlgpu3.h  imgui_impl_sdlgpu3_shaders.h
imgui-src/dcimgui/cmake/: imgui.pc.in  imguiConfig.cmake.in
imgui-src/src/: lib.rs
