[package]
name = "imgui-sdl3-sys"
version = "0.1.0-pre-0"
edition = "2024"
rust-version = "1.85"
authors = ["Michaël Palomas <mpalomas@proton.me>"]
license = "MIT"
description = "Low level Rust bindings for Dear ImGui (dcimgui) with SDL3 backend"
repository = "https://github.com/mpalomas/imgui-sdl3-sys"
keywords = ["sdl", "imgui", ]
categories = ["external-ffi-bindings"]
links = "imgui"
autoexamples = false

[features]
default = ["build-from-source", "link-static"]

# Build and link imgui from source instead of linking a pre-existing library
build-from-source = ["dep:cmake", "dep:rpkg-config", "dep:imgui-src", "dep:bindgen", "sdl3-sys/build-from-source", "sdl3-sys/sdl-lean-and-mean"]

# Build and link a static imgui library from source
build-from-source-static = ["build-from-source", "link-static", "sdl3-sys/link-static"]

# Link imgui as a static library. The default is to link a shared/dynamic library.
link-static = ["sdl3-sys/link-static"]

# Link imgui as an Apple framework. The link-static feature has no effect if this is enabled.
link-framework = []

# Don't link anything, and provide linking flags via Cargo metadata.
no-link = []

# Use pkg-config to get link flags for imgui. Only used when not building from source.
# This has no effect if the link-framework feature is enabled.
use-pkg-config = ["dep:pkg-config"]

# Implement the Debug trait for applicable types
# debug-impls = ["sdl3-sys/debug-impls"]

# Enable metadata
metadata = []
only-metadata = ["metadata", "no-link"]

# Enable nightly features
nightly = []

[dependencies]
sdl3-sys = { version = "0.6.0-pre-1" }

[build-dependencies.cmake]
version = "0.1"
optional = true

[build-dependencies.pkg-config]
version = "0.3"
optional = true

[build-dependencies.rpkg-config]
version = "0.1.2"
optional = true

[build-dependencies.imgui-src]
path = "../imgui-src"
optional = true

[build-dependencies.bindgen]
version = "0.72"
optional = true

